tests/baselines/reference/moduleExports1.errors.txt
moduleExports1.ts(3,10): error TS2564: Property 'address' has no initializer and is not definitely assigned in the constructor.
moduleExports1.ts(13,6): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
moduleExports1.ts(13,22): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== moduleExports1.ts (3 errors) ====
    export namespace TypeScript.Strasse.Street {
    	export class Rue {
    		public address:string;
    		       ~~~~~~~
!!! error TS2564: Property 'address' has no initializer and is not definitely assigned in the constructor.
    	}	
    }
    
    var rue = new TypeScript.Strasse.Street.Rue();
    
    rue.address = "1 Main Street";
    
    void 0;
    
    if (!module.exports) module.exports = "";
         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.